# formal-languages

./: CMakeLists.txt  LICENSE
src/: lexer.cpp  lexer.hpp  nfa.cpp  nfa.hpp  postfix-to-suffix.cpp  postfix-to-suffix.hpp  regex-parser.cpp
tests/: test_converter.cpp  test_lexer.cpp  test_nfa.cpp
